--- a/scss/style.css
+++ b/scss/style.css
@@ -54,15 +54,25 @@ body .container .top-nav .team_function .submit-button {
   background: rgba(180, 3, 58, 0.2);
   margin-right: 30px;
   color: #ffffff;
-  padding: 10px;
+  padding: 9px;
   position: relative;
-  bottom: 12px;
+  bottom: 24px;
   width: 130px;
+}
+@media screen and (max-width: 767px) {
+  body .container .top-nav .team_function .submit-button {
+    bottom: 10px;
+    height: 40px;
+    margin-top: 10px;
+  }
 }
 @media screen and (max-width: 767px) {
   body .container .top-nav .team_function {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    left: 25%;
   }
 }
 body .container .create_team {
