--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,15 +59,23 @@ body {
           background: rgba(180, 3, 58, 0.2);
           margin-right: 30px;
           color: $text-color;
-          padding: 10px;
+          padding: 9px;
           position: relative;
-          bottom: 12px;
+          bottom: 24px;
           width: 130px;
+
+          @media screen and (max-width: 767px) {
+            bottom: 10px;
+            height: 40px;
+            margin-top: 10px;
+          }    
         }
         @media screen and (max-width: 767px) {
           display: flex;
           flex-direction: row;
-          
+          justify-content: space-between;
+          position: relative;
+          left: 25%;
         }
       }
     }
